--- a/css/home.css
+++ b/css/home.css
@@ -11,19 +11,89 @@ body{
 	margin: 15px;
 	min-width: 840px;
 }
+body>audio{
+	display: none;
+}
+
+/* introdução */
+#introducao{
+	position: fixed;
+	width: 100%;
+	height: 1900px;
+	z-index: 1;
+	background-color: rgb(0, 0, 0, 0.5);
+	text-align: center;
+	animation: abre 1s;
+	/* Para matar a div */
+}
+#introducao p{
+	background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-size: 5em;
+	animation: animaletra 4s infinite;
+}
+#introducao img{
+	width: 640px;
+}
+
+/* Animação da Introdução */
+@keyframes abre{
+	0%{
+		margin-top: -1500px;
+		opacity: 0.0;
+	}
+	100%{
+		margin-top: 0;
+		opacity: 1.0;
+	}
+}
+@keyframes animaletra{
+	0%{
+		background-size: 10%;
+	}
+	40%{
+		background-size: 40%;
+	}
+	80%{
+		background-size: 70%;
+	}
+	100%{
+		background-size: 100%;
+	}
+}
+@keyframes sair{
+	0%{
+		opacity: 1.0;
+	}
+	100%{
+		opacity: 0;
+	}
+}
+@keyframes deslizar{
+	0%{
+		opacity: 0;
+		right: 5000px;
+	}
+	100%{
+		opacity: 1	;
+		right: 0;
+	}
+}
 
 /* Container */
 #conteudo{
-	background-color: #EBE5BE;
-}
+	background-color: #EBE5BE;}
 
 /* Cabecalho */
 #cabecalho{
 	background-image: url('../imagem/topo-imagem-principal.png');
-	background-repeat: repeat-x;
+	background-repeat: no-repeat;
 	background-position: left;
+	background-color: #dfd493;
 	height: 250px;
-	position: relative;
+	z-index: 2;
 }
 #logo{
 	width: 100%;
@@ -43,6 +113,7 @@ body{
 	top: 0;
 	right: 0;
 	min-width: 640px;
+
 }
 #clear{
 	clear: both;
@@ -64,6 +135,11 @@ body{
 	border: none;
 	width: 8em;
 	height: 35px;
+	cursor: pointer;
+}
+#conteudo-titulo button:hover{
+	transform: scale(1.2);
+	opacity: 0.8em;
 }
 
 #conteudo-titulo h5{
@@ -238,6 +314,12 @@ body{
 	.coluna-vertical h3, p, a{
 		display: block;
 	}	
+	#introducao img{
+		width: 240px;
+	}	
+	#introducao p{
+		font-size: 2em;
+	}
 }
 
 /* Dispositivos Pequenos */
@@ -304,5 +386,11 @@ body{
 	}
 	.coluna-vertical h3, p, a{
 		display: block;
+	}	
+	#introducao img{
+		width: 440px;
+	}	
+	#introducao p{
+		font-size: 4em;
 	}	
 }
