--- a/css/home.css
+++ b/css/home.css
@@ -10,6 +10,7 @@ body{
 	background-image: url('../imagem/bg.png');
 	margin: 15px;
 	min-width: 840px;
+	z-index: 0;
 }
 
 /* introdução */
@@ -17,10 +18,10 @@ body{
 	position: fixed;
 	width: 100%;
 	height: 1900px;
-	z-index: 1;
 	background-color: rgb(0, 0, 0, 0.5);
 	text-align: center;
 	animation: abre 1s;
+	z-index: 1;
 	/* Para matar a div */
 }
 #introducao p{
@@ -38,11 +39,9 @@ body{
 /* Animação da Introdução */
 @keyframes abre{
 	0%{
-		margin-top: -1500px;
 		opacity: 0.0;
 	}
 	100%{
-		margin-top: 0;
 		opacity: 1.0;
 	}
 }
@@ -64,16 +63,20 @@ body{
 	0%{
 		opacity: 1.0;
 	}
+	25%{
+		opacity: 0.8;
+	}
+	45%{
+		opacity: 0.6;
+	}
+	65%{
+		opacity: 0.3;
+	}
+	85%{
+		opacity: 0.2;
+	}
 	100%{
 		opacity: 0;
-	}
-}
-@keyframes deslizar{
-	0%{
-		opacity: 0;
-	}
-	100%{
-		opacity: 1	;
 	}
 }
 
@@ -88,7 +91,7 @@ body{
 	background-position: left;
 	background-color: #dfd493;
 	height: 250px;
-	z-index: 2;
+	position: relative;
 }
 #logo{
 	width: 100%;
@@ -108,7 +111,6 @@ body{
 	top: 0;
 	right: 0;
 	min-width: 640px;
-
 }
 #clear{
 	clear: both;
@@ -383,7 +385,7 @@ body{
 		display: block;
 	}	
 	#introducao img{
-		width: 440px;
+		width: 280px;
 	}	
 	#introducao p{
 		font-size: 4em;
